--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+
+
+spring.datasource.url=jdbc:postgresql://techdrop-database.c640vives07n.us-east-1.rds.amazonaws.com:5432/techDropDB?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=postgres
+spring.datasource.password=dGVjaERyb3A=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+
+aws.access_key_id=AKIATHH65LWAZWTWBMOG
+aws.secret_access_key=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
+aws.s3.bucket=techdrop-bucket
+aws.s3.region=us-east-1
