added the error page and sorted the database returns

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,15 @@ spring.datasource.password=dGVjaERyb3A=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 
+
+
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
+logging.level.site.user.AccessException=ERROR
 
 aws.access_key_id=AKIATHH65LWAZWTWBMOG
 aws.secret_access_key=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
