--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://techdrop-database.c640vives07n.us-east-1.rds.amazonaws.com:5432/techDropDB?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
-spring.datasource.username=postgres
-spring.datasource.password=dGVjaERyb3A=
+spring.datasource.url={database}
+spring.datasource.username={username}
+spring.datasource.password={password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 
@@ -14,7 +14,7 @@ server.error.path=/error
 
 logging.level.site.user.AccessException=ERROR
 
-aws.access_key_id=AKIATHH65LWAZWTWBMOG
-aws.secret_access_key=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
+aws.access_key_id={key]
+aws.secret_access_key={acces_key}
 aws.s3.bucket=techdrop-bucket
 aws.s3.region=us-east-1
